--- a/roncoo-pay-service/src/main/resources/alipay_config.properties
+++ b/roncoo-pay-service/src/main/resources/alipay_config.properties
@@ -1,10 +1,10 @@
 #################################################  支付宝分页查询账单配置  #####################################################
 
 #合作身份者ID，签约账号，以2088开头由16位纯数字组成的字符串，查看地址：https://b.alipay.com/order/pidAndKey.htm
-partner=111111111111111
+partner=2088612008318500
 
 #MD5密钥，安全检验码，由数字和字母组成的32位字符串，查看地址：https://b.alipay.com/order/pidAndKey.htm
-key=1111111111111111
+key=kmi4yhfjbfixica9pcfma0ndxyo56arz
 
 #支付宝提供给商户的服务接入网关URL(新)
 alipay_gateway_new=https\://mapi.alipay.com/gateway.do?
@@ -43,7 +43,7 @@ trade_pay_url = https://openapi.alipay.com/gateway.do
 trade_query_url = https://openapi.alipay.com/gateway.do
 
 #appid
-app_id = 1111111111111
+app_id = 2019101468374443
 
 #商户私钥
 mch_private_key =MIIEvwIBADANBgkqha+UviBN6Gz3NcinnR4wERLD7RCO0tM1+B38zziMhbg==
