--- a/roncoo-pay-service/src/main/resources/mq_config.properties
+++ b/roncoo-pay-service/src/main/resources/mq_config.properties
@@ -1,10 +1,10 @@
 ## MQ
-mq.brokerURL=failover\:(tcp\://127.0.0.1\:61616)?randomize\=false&initialReconnectDelay\=1000&maxReconnectDelay\=30000
-mq.userName=roncoo_demo
-mq.password=xxxxxxx
+mq.brokerURL=failover\:(tcp\://10.0.1.85\:61616)?randomize\=false&initialReconnectDelay\=1000&maxReconnectDelay\=30000
+mq.userName=admin
+mq.password=admin
 mq.pool.maxConnections=20
 
 
-tradeQueueName.notify=opensource_demo_tradeNotify
+tradeQueueName.notify=tc_tradeNotify
 
-orderQueryQueueName.query=opensource_demo_orderQuery
+orderQueryQueueName.query=tc_orderQuery
