--- a/roncoo-pay-web-sample-shop/src/main/resources/pay_config.properties
+++ b/roncoo-pay-web-sample-shop/src/main/resources/pay_config.properties
@@ -5,21 +5,21 @@ payKey=64efebf7eb5b439d8fa213de9028392e
 paySecret=bf183091a6654c339b7b452a996c4ce5
 
 #扫码支付请求地址
-scanPayUrl=http://demo.pay.roncoo.com/roncoo-pay-web-gateway/scanPay/initPay
+scanPayUrl=http://localhost:8092/roncoo-pay-web-gateway/scanPay/initPay
 
 #条码支付请求地址
-f2fPayUrl=http://demo.pay.roncoo.com/roncoo-pay-web-gateway/f2fPay/doPay
+f2fPayUrl=http://localhost:8092/roncoo-pay-web-gateway/f2fPay/doPay
 
 #小程序支付
-programpayUrl=http://demo.pay.roncoo.com/roncoo-pay-web-gateway/programpay/doPay
+programpayUrl=http://localhost:8092/roncoo-pay-web-gateway/programpay/doPay
 
-programpayAuthorizeUrl=http://demo.pay.roncoo.com/roncoo-pay-web-gateway/programpay/authorize
+programpayAuthorizeUrl=http://localhost:8092/roncoo-pay-web-gateway/programpay/authorize
 
-authUrl=http://demo.pay.roncoo.com/roncoo-pay-web-gateway/auth/initAuth
+authUrl=http://localhost:8092/roncoo-pay-web-gateway/auth/initAuth
 
-initProgramAuthUrl=http://demo.pay.roncoo.com/roncoo-pay-web-gateway/auth/initProgramAuth
+initProgramAuthUrl=http://localhost:8092/roncoo-pay-web-gateway/auth/initProgramAuth
 
-doProgramAuthUrl=http://demo.pay.roncoo.com/roncoo-pay-web-gateway/auth/doProgramAuth/
+doProgramAuthUrl=http://localhost:8092/roncoo-pay-web-gateway/auth/doProgramAuth/
 
 #支付结果后台通知地址
 notifyUrl=http://www.roncoo.com
@@ -31,4 +31,4 @@ returnUrl=http://www.roncoo.com
 orderPeriod=5
 
 #下单IP
-orderIp=192.168.1.13
+orderIp=10.0.1.234
